adding correct badge name; updating pkg list

--- a/README.Rmd
+++ b/README.Rmd
@@ -7,9 +7,9 @@ output: md_document
 # OpenCaseStudies
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/opencasestudies/ocs-bp-youth-disconnection/workflows/R-CMD-check/badge.svg)](https://github.com/opencasestudies/ocs-bp-youth-disconnection/actions)
+[![render-README](https://github.com/opencasestudies/ocs-bp-youth-disconnection/workflows/render-README/badge.svg)](https://github.com/opencasestudies/ocs-bp-youth-disconnection/actions)
 [![render-index](https://github.com/opencasestudies/ocs-bp-youth-disconnection/workflows/render-index/badge.svg)](https://github.com/opencasestudies/ocs-bp-youth-disconnection/actions)
-[![render-readme](https://github.com/opencasestudies/ocs-bp-youth-disconnection/workflows/render-readme/badge.svg)](https://github.com/opencasestudies/ocs-bp-youth-disconnection/actions)
+[![R-CMD-check](https://github.com/opencasestudies/ocs-bp-youth-disconnection/workflows/R-CMD-check/badge.svg)](https://github.com/opencasestudies/ocs-bp-youth-disconnection/actions)
 <!-- badges: end -->
 
 ### Disclaimer 
