update format and logo - just Rmd

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,7 @@ This work is licensed under the Creative Commons Attribution-NonCommercial 3.0 (
 
 To cite this case study:
 
-Wright, Carrie, and Ontiveros, Michael and Jager, Leah and Taub, Margaret and Hicks, Stephanie. (2020). https://github.com/opencasestudies/ocs-youth-disconnection-case-study. Disparities in Youth Disconnection (Version v1.0.0).
+Wright, Carrie and Ontiveros, Michael and Jager, Leah and Taub, Margaret and Hicks, Stephanie. (2020). [https://github.com/opencasestudies/ocs-youth-disconnection-case-study](https://github.com/opencasestudies/ocs-youth-disconnection-case-study). Disparities in Youth Disconnection (Version v1.0.0).
 
 ### Acknowledgements
 
@@ -69,7 +69,10 @@ These reports use data from the [American Community Survey (ASC)](https://www.ce
 
 #### Learning Objectives
 
-Data science skills:  
+The skills, methods, and concepts that students will be familiar with by the end of this case study are:
+
+
+<u>**Data Science Learning Objectives:**</u>   
 
 1. Importing text from PDF files using images and the `magick` package  
 2. Apply action verbs in `dplyr` for data wrangling  
@@ -79,7 +82,7 @@ Data science skills:
 6. How to add images to plots using `cowplot`
 7. How to create effective bar plots to for multiple comparisons, including adding gaps between bars in bar plots, adding figure legends to the plot area, and adding comparison lines (`ggplot2`)
 
-Statistical concepts and methods:  
+<u>**Statistical Learning Objectives:**</u>  
 
 1. Implementation of the Mann-Kendall trend test  
 2. Interpretation of the Mann-Kendall trend test 
