cleaning up readme and git action yaml files

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,17 +4,23 @@ output: md_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-# OpenCaseStudies
+# Open Case Studies
 
 <!-- badges: start -->
 [![render-README](https://github.com/opencasestudies/ocs-bp-youth-disconnection/workflows/render-README/badge.svg)](https://github.com/opencasestudies/ocs-bp-youth-disconnection/actions)
 [![render-index](https://github.com/opencasestudies/ocs-bp-youth-disconnection/workflows/render-index/badge.svg)](https://github.com/opencasestudies/ocs-bp-youth-disconnection/actions)
 <!-- badges: end -->
 
+### Important links 
+
+- HTML: https://www.opencasestudies.org/ocs-bp-youth-disconnection
+- GitHub: https://github.com/opencasestudies/ocs-bp-youth-disconnection
+- Bloomberg American Health Initiative: https://americanhealth.jhu.edu/open-case-studies
+
 ### Disclaimer 
 
-The purpose of the [Open Case
-Studies](https://opencasestudies.github.io) project is **to demonstrate
+The purpose of the [Open Case Studies](https://www.opencasestudies.org) 
+project is **to demonstrate
 the use of various data science methods, tools, and software in the
 context of messy, real-world data**. A given case study does not cover
 all aspects of the research process, is not claiming to be the most
@@ -24,14 +30,14 @@ from scientific experts.
 
 ### License 
 
-This case study is part of the [OpenCaseStudies](https://opencasestudies.github.io) project. 
+This case study is part of the [Open Case Studies](https://www.opencasestudies.org) project. 
 This work is licensed under the Creative Commons Attribution-NonCommercial 3.0 ([CC BY-NC 3.0](https://creativecommons.org/licenses/by-nc/3.0/us/)) United States License.
 
 ### Citation 
 
 To cite this case study:
 
-Wright, Carrie and Ontiveros, Michael and Jager, Leah and Taub, Margaret and Hicks, Stephanie. (2020). [https://github.com/opencasestudies/ocs-youth-disconnection-case-study](https://github.com/opencasestudies/ocs-youth-disconnection-case-study). Disparities in Youth Disconnection (Version v1.0.0).
+Wright, Carrie and Ontiveros, Michael and Jager, Leah and Taub, Margaret and Hicks, Stephanie C. (2020). [https://github.com/opencasestudies/ocs-youth-disconnection-case-study](https://github.com/opencasestudies/ocs-youth-disconnection-case-study). Disparities in Youth Disconnection.
 
 ### Acknowledgements
 
@@ -70,7 +76,6 @@ These reports use data from the [American Community Survey (ASC)](https://www.ce
 #### Learning Objectives
 
 The skills, methods, and concepts that students will be familiar with by the end of this case study are:
-
 
 <u>**Data Science Learning Objectives:**</u>   
 
@@ -135,7 +140,7 @@ See [here](https://en.wikipedia.org/wiki/American_Community_Survey) for more det
 
 [Piping in R](https://cran.r-project.org/web/packages/magrittr/vignettes/magrittr.html){target="_blank"}   
 [Writing functions](https://r4ds.had.co.nz/functions.html)   
-Also see [this case study](https://opencasestudies.github.io/ocs-bloomberg-vaping-case-study/){target="_blank"}  for more information on writing functions.   
+Also see [this case study](https://www.opencasestudies.org/ocs-bp-vaping-case-study/){target="_blank"}  for more information on writing functions.   
 [String manipulation cheatsheet](https://rstudio.com/resources/cheatsheets/){target="_blank"}  
 [Table formats](https://en.wikipedia.org/wiki/Wide_and_narrow_data){target="_blank"}
 
@@ -155,7 +160,7 @@ Also see [this case study](https://opencasestudies.github.io/ocs-bloomberg-vapin
 
 
 [`ggplot2` package](http://ggplot2.tidyverse.org){target="_blank"}    
-Please see [this case study](https://opencasestudies.github.io/ocs-bp-co2-emissions/)  for more details on using `ggplot2`    
+Please see [this case study](https://www.opencasestudies.org/ocs-bp-co2-emissions/)  for more details on using `ggplot2`    
 [grammar of graphics](http://vita.had.co.nz/papers/layered-grammar.html){target="_blank"}   
 [`ggplot2` themes](https://ggplot2.tidyverse.org/reference/ggtheme.html){target="_blank"}   
 [`directlabels` package methods](http://directlabels.r-forge.r-project.org/docs/index.html){target="_blank"}    
@@ -165,14 +170,14 @@ Please see [this case study](https://opencasestudies.github.io/ocs-bp-co2-emissi
 [Motivating article for this case study about youth disconnection/opportunity youth](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6243446/)
 
 
-To learn more about importing and wrangling PDFs using the `pdftools` package see this [case study](https://opencasestudies.github.io/ocs-bp-rural-and-urban-obesity/) and this [case study](https://opencasestudies.github.io/ocs-bp-rural-and-urban-obesity/). 
+To learn more about importing and wrangling PDFs using the `pdftools` package see this [case study](https://www.opencasestudies.org/ocs-bp-rural-and-urban-obesity/). 
 
 To learn more about what you can do with the `magick` package see this [vingette](https://cran.r-project.org/web/packages/magick/vignettes/intro.html).   
 
 To learn more about the **Mann-Kendall trend test** see
 [here](https://www.statisticshowto.com/mann-kendall-trend-test/) and [here](https://www.statisticshowto.com/wp-content/uploads/2016/08/Mann-Kendall-Analysis-1.pdf).  
 
-To learn more about hypothesis testing, see this [case study](https://opencasestudies.github.io/ocs-bp-rural-and-urban-obesity/).    
+To learn more about hypothesis testing, see this [case study](https://www.opencasestudies.org/ocs-bp-rural-and-urban-obesity/).    
 
 
 <u>**Packages used in this case study:** </u>
@@ -195,11 +200,8 @@ Package   | Use in this case study
 [forcats](https://forcats.tidyverse.org/){target="_blank"}      | to reorder factor for plot
 [kendall](https://cran.r-project.org/web/packages/Kendall/Kendall.pdf) | to implement the Mann-Kendall trend test in R   
 [patchwork](https://github.com/thomasp85/patchwork) | to combine plots
+[DT](https://cran.r-project.org/web/packages/DT/index.html) | Interactive tables
 
-
-#### For users 
-
-There is a [`Makefile`](Makefile) in this folder that allows you to type `make` to knit the case study contained in the `index.Rmd` to `index.html` and it will also knit the [`README.Rmd`](README.Rmd) to a markdown file (`README.md`). 
 
 #### For instructors
 
