--- a/index.Rmd
+++ b/index.Rmd
@@ -69,6 +69,10 @@ Wright, Carrie and Ontiveros, Michael and Jager, Leah and Taub, Margaret and Hic
 
 ####
 
+To access the GitHub repository for this case study see here: https://github.com//opencasestudies/ocs-bp-youth-disconnection.   
+This case study is part of a series of public health case studies for the [Bloomberg American Health Initiative](https://americanhealth.jhu.edu/open-case-studies).   
+
+
 ## **Motivation**
 *** 
 
@@ -2979,7 +2983,7 @@ Also, see [The Center for Communities That Care](https://www.communitiesthatcare
 
 ####
 
-### **Acknowledgements**
+### **Acknowledgments**
 ***
 
 We would like to acknowledge [Tamar Mendelson](https://www.jhsph.edu/faculty/directory/profile/1770/tamar-mendelson) for assisting in framing the major direction of the case study.
