--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,7 @@ To cite this case study:
 
 Wright, Carrie and Ontiveros, Michael and Jager, Leah and Taub, Margaret and Hicks, Stephanie C. (2020). [https://github.com/opencasestudies/ocs-youth-disconnection-case-study](https://github.com/opencasestudies/ocs-youth-disconnection-case-study). Disparities in Youth Disconnection.
 
-### Acknowledgements
+### Acknowledgments
 
 We would like to acknowledge [Tamar Mendelson](https://www.jhsph.edu/faculty/directory/profile/1770/tamar-mendelson) for assisting in framing the major direction of the case study.
 
