--- a/index.Rmd
+++ b/index.Rmd
@@ -3,6 +3,8 @@ title: "Open Case Studies: Disparities in Youth Disconnection"
 css: style.css
 output:
   html_document:
+    includes:
+       in_header: GA_Script.Rhtml
     self_contained: yes
     code_download: yes
     highlight: tango
@@ -2984,9 +2986,21 @@ Also, see [The Center for Communities That Care](https://www.communitiesthatcare
 
 ####
 
+### **Session Info**
+***
+
+```{r}
+sessionInfo()
+```
+
+
 ### **Acknowledgments**
 ***
 
 We would like to acknowledge [Tamar Mendelson](https://www.jhsph.edu/faculty/directory/profile/1770/tamar-mendelson) for assisting in framing the major direction of the case study.
 
 We would also like to acknowledge the [Bloomberg American Health Initiative](https://americanhealth.jhu.edu/) for funding this work. 
+
+
+
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=a&t=tt&d=O0N6_xyVRrI9LRa4Y29rluaIuSuY2k5TdZXLWTjco2U&co=ffffff&cmo=3acc3a&cmn=ff5353&ct=808080'></script>
